Added context api

--- a/blog/src/pages/login/login.css
+++ b/blog/src/pages/login/login.css
@@ -42,6 +42,10 @@
     padding: 10px;
 }
 
+.loginButton:disabled {
+    cursor: not-allowed;
+    background-color: lightcoral;
+}
 .loginRegisterButton {
     position: absolute;
     top: 60px;
