--- a/blog/src/components/singlePost/singlePost.css
+++ b/blog/src/components/singlePost/singlePost.css
@@ -5,6 +5,8 @@
 .singlePostWrapper {
     padding: 20px;
     padding-right: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .singlePostImg {
@@ -19,6 +21,20 @@
     margin: 10px;
     font-family: 'Lora', serif;
     font-size: 28px;
+}
+
+.singlePostTitleInput {
+    text-align: center;
+    margin: 10px;
+    font-family: 'Lora', serif;
+    font-size: 28px;
+    border: none;
+    border-bottom: 1px solid lightgray;
+    color: lightgray;
+}
+
+.singlePostTitleInput:focus {
+    outline: none;
 }
 
 .singlePostEdit {
@@ -54,8 +70,31 @@
     line-height: 25px;
 }
 
+.singlePostDescInput {
+    border: none;
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.singlePostDescInput:focus {
+    outline: none;
+}
+
 .singlePostDesc::first-letter {
     margin-left: 20px;
     font-size: 30px;
     font-weight: 600;
+}
+
+.singlePostButton {
+    border:none;
+    width: 100px;
+    color: white;
+    background-color: teal;
+    cursor: pointer;
+    padding: 5px;
+    align-self: flex-end;
+    border-radius: 5px;
+    margin-top: 20px;
 }
